--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,67 @@
 @tailwind utilities;
 
 .activeStyle {
-  background: linear-gradient(to right, #E1647D, #8566BB);
+  background: linear-gradient(to right, #e1647d, #8566bb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
+body {
+  background-color: #ecf0f3;
+}
+
+.btn-main {
+  align-items: center;
+  background-image: linear-gradient(to right, #8566bb, #e1647d);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn-main:active,
+.btn-main:hover {
+  outline: 0;
+  transform: translateY(-5px);
+}
+
+.btn-main span {
+  background-color: #f6f8f9;
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.btn-main:hover span {
+  background: none;
+  color: white;
+}
+
+.btn-main:active {
+  transform: scale(0.9);
+}
+
+@media screen and (max-width: 767px) {
+  .btn-main {
+    margin-top: 13px;
+  }
+  .btn-main span {
+    padding: 10px 8px;
+  }
+}
