--- a/src/Pages/Home/Contact/Contact.css
+++ b/src/Pages/Home/Contact/Contact.css
@@ -1,20 +1,20 @@
 .contact-container {
-  width: 350px;
-  height: 400px;
+  padding: 10px 0;
+  width: 450px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   border-radius: 3px;
-  border: 1px solid #396afc;
-  background: linear-gradient(to right, #005c97, #363795);
+  background: linear-gradient(to right, #ecf0f3, #f9fafb);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .contact-container form .descr {
   font-size: 20px;
   font-weight: 500;
-  color: #e8e8e8;
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
   margin-bottom: 25px;
   margin-top: 25px;
   text-align: center;
@@ -25,19 +25,22 @@
   flex-direction: column;
 }
 
-.input-for-contact, textarea {
+.input-for-contact,
+textarea {
   margin: 1em 0 1em 0;
   width: 300px;
   position: relative;
 }
 
-.input-for-contact input, textarea {
+.input-for-contact input,
+textarea {
   font-size: 100%;
   padding: 0.7em;
   outline: none;
-  color: #e8e8e8;
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
   border: none;
-  border-bottom: 2px solid #e8e8e8;
+  border-bottom: 2px solid rgb(75 85 99 / var(--tw-text-opacity));
   background: transparent;
   border-radius: none;
   width: 100%;
@@ -48,7 +51,8 @@
   font-size: 100%;
   position: absolute;
   left: 0;
-  color: #e8e8e8;
+  --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
   padding: 0.7em;
   margin-left: 0.1em;
   pointer-events: none;
@@ -56,8 +60,8 @@
   text-transform: uppercase;
 }
 
-.input-for-contact :is(input:focus, input:valid)~label {
-  transform: translateY(-50%) scale(.9);
+.input-for-contact :is(input:focus, input:valid) ~ label {
+  transform: translateY(-50%) scale(0.9);
   margin: 0em;
   padding: 0.4em;
   background: transparent;
@@ -65,48 +69,29 @@
 
 .input-for-contact textarea:focus ~ label,
 .input-for-contact textarea:valid ~ label {
-  transform: translateY(-50%) scale(.9);
+  transform: translateY(-50%) scale(0.9);
   margin: 0em;
   padding: 0.4em;
   background: transparent;
 }
 
 .inputGroup :is(input:focus, input:valid) {
-  border-color: rgb(37, 37, 211);
+  --tw-text-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.form button {
-  color: #e8e8e8;
-  font-size: 15px;
-  align-self: flex-start;
-  padding: 0.6em;
-  border: none;
-  cursor: pointer;
-  margin-bottom: 50px;
-  background: transparent;
-  transition: all 0.3s ease-in-out;
-  position: relative;
-  overflow: hidden;
-}
-
-.form button:before {
-  content: "";
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #e8e8e8;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.form button:hover:before {
-  opacity: 0.2;
-}
 
 .form button:hover {
   transform: translateY(-3px);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
+@media screen and (max-width: 767px) {
+  .contact-container{
+    width: 90%;
+  }
+  .input-for-contact,
+textarea{
+  width: 100%;
+}
+}
