--- a/src/Pages/Home/Contact/Contact.css
+++ b/src/Pages/Home/Contact/Contact.css
@@ -89,6 +89,7 @@ textarea {
 @media screen and (max-width: 767px) {
   .contact-container{
     width: 90%;
+    margin: auto;
   }
   .input-for-contact,
 textarea{
